# versioned_scd

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  pyproject.toml
.circleci/: config.yml
src/: .gitignore
src/integration_tests/: .sqlfluff  .sqlfluffignore  dbt_project.yml  packages.yml  scd2_plus_full_config_incremental_load_test.sh  scd2_plus_min_config_incremental_load_test.sh
src/integration_tests/macros/: generate_database_name.sql  generate_schema_name.sql
src/integration_tests/models/: schema.yml
src/integration_tests/models/marts/: dim_scd2_plus_full_config_one_time_load.sql  dim_scd2_plus_min_config_incremental_load.sql  dim_scd2_plus_min_config_one_time_load.sql
src/integration_tests/seeds/: dim_scd2_plus_full_config_test_data.csv  dim_scd2_plus_min_config_test_data.csv  scd2_plus_staging_data.csv
src/macros/: scd2_plus_materialization.sql  scd2_plus_utils.sql  scd2_plus_validation.sql
